term paper v1 fixed a bug

--- a/term paper/public/index.html
+++ b/term paper/public/index.html
@@ -25,9 +25,9 @@
         </div>
         <div class="wrapper flex-row">
             <div class="statistics col-lg-8 col-md-10 col-sm-12 col-xs-12">
-                <div class="total">TOTAL: 3</div>
-                <div class="success">SUCCESS: 3</div>
-                <div class="pending">PENDING: 3</div>
+                <div class="total">TOTAL</div>
+                <div class="success">SUCCESS</div>
+                <div class="pending">PENDING</div>
             </div>
         </div>
         <div class="input-wrapper">
